--- a/appointment_booking/templates/sign_in_&_up.html
+++ b/appointment_booking/templates/sign_in_&_up.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/a7cf4e395f.js" crossorigin="anonymous"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Document</title>
     {% load static %}
 </head>
@@ -14,34 +17,53 @@
     <script src="{% static 'js/sign_in_&_up.js' %}"></script>
 
     <div class="login-box center">
-        <!-- Sign In Form -->
-        <div id="sign-in-box">
-            <h2>Sign in</h2>
-            <span>Use your user account</span>
-            <form method="POST" action="">
-                {% csrf_token %}
-                <input type="text" name="email" placeholder="Email" required>
-                <input type="password" name="password" placeholder="Password" required><br>
-                <button type="submit" class="ad-sign-in-btn">Sign in</button>
-            </form>
-        </div>
 
         <!-- Sign Up Form -->
-        <div id="sign-up-box">
+        <div id="sign-in-box">
             <h2>Sign up</h2>
             <span>Create your user account</span>
-            <form method="POST" action="">
+            <form method="POST" action="we">
                 {% csrf_token %}
-                <input type="text" name="name" placeholder="Name" required>
-                <input type="email" name="email" placeholder="Email" required>
-                <input type="password" name="password" placeholder="Password" required><br>
+                <input type="text" name="name_reg" placeholder="Name" required>
+                <input type="email" name="email_reg" placeholder="Email" required>
+                <input type="password" name="password_reg" placeholder="Password" required><br>
+
                 <button type="submit" class="us-sign-in-btn">Sign up</button>
             </form>
         </div>
 
+                <!-- Sign In Form -->
+                <div id="sign-up-box">
+                    <h2>Sign in</h2>
+                    <span>Use your user account</span>
+                    <form method="POST" action="../">
+                        {% csrf_token %}
+                        <input type="text" name="email" placeholder="Email" required>
+                        <input type="password" name="password" placeholder="Password" required><br>
+                        
+
+                        <!-- bootstrap -->
+
+                        <div class="warning_msg">
+                            {% if messages %}
+                            {% for message in messages %}
+                            <div class="alert alert-danger alert-dismissible">
+                                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                                {{ message }}
+                              </div>
+                              {% endfor %}
+                            {% endif %}
+                        </div>
+
+
+                        <button type="submit" class="ad-sign-in-btn">Sign in</button>
+                    </form>
+                </div>
+        
+
         <!-- Slider Button -->
         <div id="slider-box">
-            <button onclick="sliding()" id="switch-btn">Sign in</button>
+            <button onclick="sliding()" id="switch-btn">Sign up</button>
         </div>
 
         <!-- Welcome Text -->
