--- a/appointment_booking/templates/admin/register_doc.html
+++ b/appointment_booking/templates/admin/register_doc.html
@@ -28,6 +28,10 @@
         </div> -->
 
         <div>
+            
+            <label for="name">NAme</label>
+            <input type="name" name="name" required>
+
             <label for="email">Email</label>
             <input type="email" name="email" required>
 
