--- a/appointment_booking/templates/user/index.html
+++ b/appointment_booking/templates/user/index.html
@@ -36,7 +36,7 @@
         <div class="hero-content">
             <h1>Your Health is Our Priority</h1>
             <p>Professional healthcare services with a personal touch</p>
-           <a href="{% url 'quick_appointment' %}"> <button class="cta-button">Book Appointments</button></a>
+           <a href="appointment"> <button class="cta-button">Book Appointments</button></a>
         </div>
     </section>
 
