appointment listing in doctor page

--- a/appointment_booking/templates/doctor/doc_home.html
+++ b/appointment_booking/templates/doctor/doc_home.html
@@ -29,7 +29,7 @@
         <div class="container">
             <h2 class="hero-title">Caring for Your Health</h2>
             <p class="hero-subtitle">Providing top-notch healthcare services for your well-being.</p>
-            <a href="#contact" class="btn">Book an Appointment</a>
+            <a href="doctor_appointments_view" class="btn">View Today Appointments</a>
         </div>
     </section>
 
