--- a/appointment_booking/templates/doctor/doc_home.html
+++ b/appointment_booking/templates/doctor/doc_home.html
@@ -12,7 +12,8 @@
 
     <header class="header">
         <div class="container">
-            <h1 class="logo">Dr. Health</h1>
+            <h1 class="logo">Dr.{{ doctor.name }}</h1>
+            <h4>{{ doctor.department.name }}</h4>
             <nav class="nav">
                 <ul class="nav-list">
                     <li><a href="#about">About</a></li>
